--- a/eLections/eLections.csproj
+++ b/eLections/eLections.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CandidatesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -182,7 +183,10 @@
     <Compile Include="Models\Candidate.cs" />
     <Compile Include="Models\Election.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Land.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Party.cs" />
+    <Compile Include="Models\Votes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -245,6 +249,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Dtos\" />
+    <Folder Include="Models\ViewModels\" />
+    <Folder Include="Views\Candidates\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
