--- a/eLections/eLections.csproj
+++ b/eLections/eLections.csproj
@@ -182,10 +182,13 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdministrationController.cs" />
     <Compile Include="Controllers\ApiControllers\CandidatesController.cs" />
+    <Compile Include="Controllers\ApiControllers\ElectionsController.cs" />
     <Compile Include="Controllers\ApiControllers\LandsController.cs" />
     <Compile Include="Controllers\ApiControllers\PartiesController.cs" />
     <Compile Include="Controllers\CandidatesController.cs" />
+    <Compile Include="Controllers\ElectionsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LandsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -215,8 +218,33 @@
     <Compile Include="Migrations\202104072020339_AddedShortNameInParties.Designer.cs">
       <DependentUpon>202104072020339_AddedShortNameInParties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104082154292_AddLandToTheUser.cs" />
+    <Compile Include="Migrations\202104082154292_AddLandToTheUser.Designer.cs">
+      <DependentUpon>202104082154292_AddLandToTheUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104122005217_AddDescriptionToRole.cs" />
+    <Compile Include="Migrations\202104122005217_AddDescriptionToRole.Designer.cs">
+      <DependentUpon>202104122005217_AddDescriptionToRole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104122038369_AddDescriptionToRole1.cs" />
+    <Compile Include="Migrations\202104122038369_AddDescriptionToRole1.Designer.cs">
+      <DependentUpon>202104122038369_AddDescriptionToRole1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104141851536_AddNumberOfVotesInCandidates.cs" />
+    <Compile Include="Migrations\202104141851536_AddNumberOfVotesInCandidates.Designer.cs">
+      <DependentUpon>202104141851536_AddNumberOfVotesInCandidates.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104142121147_AddElectionModel.cs" />
+    <Compile Include="Migrations\202104142121147_AddElectionModel.Designer.cs">
+      <DependentUpon>202104142121147_AddElectionModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104142234056_EndOfElectionsNullable.cs" />
+    <Compile Include="Migrations\202104142234056_EndOfElectionsNullable.Designer.cs">
+      <DependentUpon>202104142234056_EndOfElectionsNullable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Candidate.cs" />
     <Compile Include="Models\Election.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -224,6 +252,8 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Party.cs" />
     <Compile Include="Models\ViewModels\CandidateFormViewModel.cs" />
+    <Compile Include="Models\ViewModels\ManageRoleViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserViewModel.cs" />
     <Compile Include="Models\Votes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -529,6 +559,13 @@
     <Content Include="Views\Parties\PartyForm.cshtml" />
     <Content Include="Views\Lands\LandsList.cshtml" />
     <Content Include="Views\Lands\LandForm.cshtml" />
+    <Content Include="Views\Shared\_Navbar.cshtml" />
+    <Content Include="Views\Administration\UsersList.cshtml" />
+    <Content Include="Views\Administration\Details.cshtml" />
+    <Content Include="Views\Administration\ManageRoles.cshtml" />
+    <Content Include="Views\Candidates\Votes.cshtml" />
+    <Content Include="Views\Home\IndexGuest.cshtml" />
+    <Content Include="Views\Elections\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -561,6 +598,24 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202104072020339_AddedShortNameInParties.resx">
       <DependentUpon>202104072020339_AddedShortNameInParties.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104082154292_AddLandToTheUser.resx">
+      <DependentUpon>202104082154292_AddLandToTheUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104122005217_AddDescriptionToRole.resx">
+      <DependentUpon>202104122005217_AddDescriptionToRole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104122038369_AddDescriptionToRole1.resx">
+      <DependentUpon>202104122038369_AddDescriptionToRole1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104141851536_AddNumberOfVotesInCandidates.resx">
+      <DependentUpon>202104141851536_AddNumberOfVotesInCandidates.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104142121147_AddElectionModel.resx">
+      <DependentUpon>202104142121147_AddElectionModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104142234056_EndOfElectionsNullable.resx">
+      <DependentUpon>202104142234056_EndOfElectionsNullable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
