--- a/eLections/eLections.csproj
+++ b/eLections/eLections.csproj
@@ -198,6 +198,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CandidatesHelper.cs" />
+    <Compile Include="Helpers\ElectionHelper.cs" />
+    <Compile Include="Helpers\PartyHelper.cs" />
     <Compile Include="Migrations\202103222148485_Init.cs" />
     <Compile Include="Migrations\202103222148485_Init.Designer.cs">
       <DependentUpon>202103222148485_Init.cs</DependentUpon>
@@ -242,15 +245,30 @@
     <Compile Include="Migrations\202104142234056_EndOfElectionsNullable.Designer.cs">
       <DependentUpon>202104142234056_EndOfElectionsNullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104202018352_AddCoalitionOptionToParty.cs" />
+    <Compile Include="Migrations\202104202018352_AddCoalitionOptionToParty.Designer.cs">
+      <DependentUpon>202104202018352_AddCoalitionOptionToParty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104202022074_AddIsCoalitionOptionToParty.cs" />
+    <Compile Include="Migrations\202104202022074_AddIsCoalitionOptionToParty.Designer.cs">
+      <DependentUpon>202104202022074_AddIsCoalitionOptionToParty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202104202043260_AddSeatsToLands.cs" />
+    <Compile Include="Migrations\202104202043260_AddSeatsToLands.Designer.cs">
+      <DependentUpon>202104202043260_AddSeatsToLands.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\CalculationResult.cs" />
     <Compile Include="Models\Candidate.cs" />
     <Compile Include="Models\Election.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Land.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Party.cs" />
+    <Compile Include="Models\PartyLandVotes.cs" />
+    <Compile Include="Models\PartyLandVotesMultiplier.cs" />
     <Compile Include="Models\ViewModels\CandidateFormViewModel.cs" />
     <Compile Include="Models\ViewModels\ManageRoleViewModel.cs" />
     <Compile Include="Models\ViewModels\UserViewModel.cs" />
@@ -616,6 +634,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202104142234056_EndOfElectionsNullable.resx">
       <DependentUpon>202104142234056_EndOfElectionsNullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104202018352_AddCoalitionOptionToParty.resx">
+      <DependentUpon>202104202018352_AddCoalitionOptionToParty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104202022074_AddIsCoalitionOptionToParty.resx">
+      <DependentUpon>202104202022074_AddIsCoalitionOptionToParty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104202043260_AddSeatsToLands.resx">
+      <DependentUpon>202104202043260_AddSeatsToLands.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
