Added toastr and some small fixes

--- a/eLections/eLections.csproj
+++ b/eLections/eLections.csproj
@@ -261,6 +261,10 @@
     <Compile Include="Migrations\202105112033053_PartyFullNameIsRequired.Designer.cs">
       <DependentUpon>202105112033053_PartyFullNameIsRequired.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105112106326_ChangedLandsToConstituencies.cs" />
+    <Compile Include="Migrations\202105112106326_ChangedLandsToConstituencies.Designer.cs">
+      <DependentUpon>202105112106326_ChangedLandsToConstituencies.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -443,6 +447,8 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -454,6 +460,8 @@
     <Content Include="Content\DataTables\css\semanticui.scss" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
@@ -541,6 +549,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -579,8 +589,8 @@
     <Content Include="Views\Candidates\CandidatesList.cshtml" />
     <Content Include="Views\Parties\PartiesList.cshtml" />
     <Content Include="Views\Parties\PartyForm.cshtml" />
-    <Content Include="Views\Constituency\ConstituencyList.cshtml" />
-    <Content Include="Views\Constituency\ConstituencyForm.cshtml" />
+    <Content Include="Views\Constituencies\ConstituencyList.cshtml" />
+    <Content Include="Views\Constituencies\ConstituencyForm.cshtml" />
     <Content Include="Views\Shared\_Navbar.cshtml" />
     <Content Include="Views\Administration\UsersList.cshtml" />
     <Content Include="Views\Administration\Details.cshtml" />
@@ -650,6 +660,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105112033053_PartyFullNameIsRequired.resx">
       <DependentUpon>202105112033053_PartyFullNameIsRequired.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105112106326_ChangedLandsToConstituencies.resx">
+      <DependentUpon>202105112106326_ChangedLandsToConstituencies.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
