Changing more methods to Async Some translations Fixing Calculations Adding IndexResult View

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,4 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/eLections/Controllers/ApiControllers/AutoFillController.cs
